--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,20 +1,16 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 on:
-  # Runs on pushes targeting the default branch
   schedule:
-    - cron: "*/30 * * * *"  # Fixed cron syntax
-  # Allows you to run this workflow manually from the Actions tab
+    - cron: "*/30 * * * *"
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: write
   deployments: write
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -39,10 +35,15 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: Create artifact directory
+        run: |
+          mkdir _site
+          cp -r * _site/ || true
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'  # Upload the entire repository
+          path: _site
 
       - name: Commit files
         run: |
